--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
-    <link rel = "stylesheet" href = "./assets/style.css">
     <link rel = "reset" href = "./assets/reset.css">
+    <link rel = "stylesheet" href = "./assets/style.css">
 </head>
 <body>
-    <div>
-        <nav>
-            <a href = "./highscores.html">View Highscores</a>
-        </nav>
-        <header>
+    <nav id = "navbar">
+        <a href = "./highscores.html">View Highscores</a>
+        <div id = "countdown">Timer=</div>
+    </nav>
+    <div id = "main-content">
+        <header id = "header">
             <h1>Coding Quiz Challenge</h1>
         </header>
-        <div>
+        <div id = "subtext">
             <p>
                 Test your skills with this super hard quiz.
             </p>
         </div>
-        <div>
-            <button>Start Quiz</button>
+        <div id ="button-placement">
+            <button class = "buttonstyle buttons">Start Quiz</button>
         </div>
     </div>
     <script src ="./assets/script.js"></script>
