--- a/highscores.html
+++ b/highscores.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Highscores page</h1>
-    <button><a href = "./index.html"> Return Home</a></button>
-    <button><a href = ""> Reset Highscores</a></button>
+    <button class = "button"><a href = "./index.html"> Return Home</a></button>
+    <button class = "button"><a href = ""> Reset Highscores</a></button>
 </body>
 </html>
