--- a/highscores.html
+++ b/highscores.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Highscores Page</title>    
+    <link rel = "reset" href = "./assets/reset.css">
+    <link rel = "style" href = "./assets/highscore-style.css">
+
 </head>
 <body>
-    <h1>Highscores page</h1>
-    <button class = "button"><a href = "./index.html"> Return Home</a></button>
-    <button class = "button"><a href = ""> Reset Highscores</a></button>
+    <div id = "header">
+        <h1>Highscores page</h1>
+    </div>
+
+    <button class = "button buttonstyle"><a href = "./index.html"> Return Home</a></button>
+    <button class = "button buttonstyle"><a href = ""> Reset Highscores</a></button>
 </body>
 </html>
+
