local-storage-fix

--- a/highscores.html
+++ b/highscores.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Highscores Page</title>    
     <link rel = "reset" href = "./assets/reset.css">
-    <link rel = "style" href = "./assets/highscore-style.css">
-
+    <link rel = "stylesheet" href = "./assets/highscore-style.css">
 </head>
 <body>
     <div id = "header">
         <h1>Highscores page</h1>
     </div>
-
-    <button class = "button buttonstyle"><a href = "./index.html"> Return Home</a></button>
-    <button class = "button buttonstyle"><a href = ""> Reset Highscores</a></button>
+    <div id = "highscores-list">
+        <p>placement</p>
+    </div>
+    <div id = "button-placement">
+        <button class = "button buttonstyle"><a href = "./index.html"> Return Home</a></button>
+        <button id = "reset-score" class = "button buttonstyle"><a href = ""> Reset Highscores</a></button>
+    </div>
+    <script src = "./assets/script.js"></script>
 </body>
 </html>
-
