--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id = "body">
     <nav id = "navbar">
-        <a id = "highscore-nav" href = "./highscores.html">View Highscores</a>
+        <button id = "highscore-nav">View Highscores</button>
         <div id = "countdown">Timer = 75</div>
     </nav>
     <div id = "main-content">
@@ -34,11 +34,11 @@
             <button class = "buttonstyle" id = "button3"></button>
             <button class = "buttonstyle" id = "button4"></button>
         </div>
-        <div id = "check-box" style = "display: none;">
-            <p id = "check" style = "display: none;"></p>
+        <div id = "check-box" style = "display: none">
+            <p id = "check" style = "display: none"></p>
         </div>
     </div>
-    <div id = "game-over" style = "display: none;">
+    <div id = "game-over" style = "display: none">
         <h1 id = "all-done" >All Done!</h1>
         <div>
             <p id = "final-score"></p>
@@ -49,6 +49,17 @@
                 <input type="text" id="initial" name = "initials" placeholder="E.X. IDP">
                 <button id = "submit" >Submit</button>
             </form>
+        </div>
+    </div>
+    <div class = "highscores-page hide">
+        <div id = "header">
+            <h1>Highscores page</h1>
+        </div>
+        <div id = "highscores-list">
+        </div>
+        <div id = "button-placement">
+            <button id = "return-home" class = "button buttonstyle">Return Home</button>
+            <button id = "reset-score" class = "button buttonstyle">Reset Highscores</button>
         </div>
     </div>
     <script src ="./assets/script.js"></script>
