--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body id="body">
     <nav id="navbar">
+        <!--TODO: hide view highscores during quiz -->
       <button id="highscore-nav">View Highscores</button>
       <div id="countdown">Timer = 75</div>
     </nav>
