--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body id="body">
     <nav id="navbar">
         <!--TODO: hide view highscores during quiz -->
-      <button id="highscore-nav">View Highscores</button>
+      <button class = "highscore-nav">View Highscores</button>
       <div id="countdown">Timer = 75</div>
     </nav>
     <div id="main-content">
