--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="header">
         <h1>Highscores page</h1>
       </div>
-      <div id="highscores-list"></div>
+      <ol id="highscores-list" class = "list-style"></ol>
       <div id="button-placement">
         <button id="return-home" class="button buttonstyle">Return Home</button>
         <button id="reset-score" class="button buttonstyle">
