--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding Quiz</title>
+    <title>Quizlet</title>
     <link rel="reset" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
@@ -19,7 +19,7 @@
         <h1>Coding Quiz Challenge</h1>
       </header>
       <div id="subtext">
-        <p>Test your skills with this super hard quiz.</p>
+        <p id="instructions">Try to answer the following trivia questions. You will have 75 senonds to complete 4 questions. Each wrong question will result in 10 seconds redacted from the timer. Your final score will be the time remaining. Enter your name/initials on completion. Press the start quiz button to begin.</p>
       </div>
       <div id="button-placement">
         <button id="start-button" class="buttonstyle buttons">
