--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   </head>
   <body id="body">
     <nav id="navbar">
-        <!--TODO: hide view highscores during quiz -->
-      <button class = "highscore-nav">View Highscores</button>
+      <!--TODO: hide view highscores during quiz -->
+      <button class="highscore-nav">View Highscores</button>
       <div id="countdown">Timer = 75</div>
     </nav>
     <div id="main-content">
       <header id="header">
-        <h1>Coding Quiz Challenge</h1>
+        <h1>Trivia Quiz Challenge</h1>
       </header>
       <div id="subtext">
-        <p id="instructions">Try to answer the following trivia questions. You will have 75 senonds to complete 4 questions. Each wrong question will result in 10 seconds redacted from the timer. Your final score will be the time remaining. Enter your name/initials on completion. Press the start quiz button to begin.</p>
+        <p id="instructions">
+          Try to answer the following trivia questions. You will have 75 senonds
+          to complete 4 questions. Each wrong question will result in 10 seconds
+          redacted from the timer. Your final score will be the time remaining.
+          Enter your name/initials on completion. Press the start quiz button to
+          begin.
+        </p>
       </div>
       <div id="button-placement">
         <button id="start-button" class="buttonstyle buttons">
@@ -61,7 +67,7 @@
       <div id="header">
         <h1>Highscores page</h1>
       </div>
-      <ol id="highscores-list" class = "list-style"></ol>
+      <ol id="highscores-list" class="list-style"></ol>
       <div id="button-placement">
         <button id="return-home" class="button buttonstyle">Return Home</button>
         <button id="reset-score" class="button buttonstyle">
